@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 1.2-9
-Date: 2017-03-08
+Version: 1.2-10
+Date: 2017-04-18
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler
