@@ -63,10 +63,10 @@ SEXP CHMfactor_spsolve(SEXP a, SEXP b, SEXP system)
     SEXP dn = PROTECT(allocVector(VECSXP, 2));
     // none from a: our CHMfactor objects have no dimnames
     SET_VECTOR_ELT(dn, 1, duplicate(VECTOR_ELT(GET_SLOT(b, Matrix_DimNamesSym), 1)));
+    SEXP ans = chm_sparse_to_SEXP(cholmod_spsolve(sys, L, B, &c),
+				  1/*do_free*/, 0/*uploT*/, 0/*Rkind*/, "", dn);
     UNPROTECT(1);
-
-    return chm_sparse_to_SEXP(cholmod_spsolve(sys, L, B, &c),
-			      1/*do_free*/, 0/*uploT*/, 0/*Rkind*/, "", dn);
+    return ans;
 }
 
 /**
